--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,7 +1,7 @@
 
 :root {
   --default-font: "Roboto",  system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --heading-font: "Playfair Display",  sans-serif;
+  --heading-font: "Dead Saloon",  sans-serif;
   --nav-font: "Poppins",  sans-serif;
 }
 
@@ -69,6 +69,7 @@ h4,
 h5,
 h6 {
   color: var(--heading-color);
+  font-family:Georgia, 'Times New Roman', Times, serif;
 }
 .php-email-form .error-message {
   display: none;
@@ -1706,4 +1707,3 @@ section,
 .contact .php-email-form button[type=submit]:hover {
   background: var(--accent-color);
 }
-
